Bug 2023293: Constrain day before calling CreateDateFromCodes with overflow=reject for Chinese/Dangi calendars. r=spidermonkey-reviewers,dminor

This is like D275957 (bug 2005482), but for the Chinese/Dangi calendars.

To avoid duplicating too much code, the Hebrew/Chinese/Dangi calendar `case`s
are now merged.

The test case is similar to "non262/Temporal/PlainDate/hebrew-from-ordinal-month.js",
except that more than one leap year is tested, because leap years don't follow any
algorithmic laws for the Chinese/Dangi calendars.

Differential Revision: https://phabricator.services.mozilla.com/D288931