js/src/builtin/temporal/Calendar.cpp
@@ -1082,97 +1082,13 @@ static UniqueICU4XDate CreateDateFrom(JSContext* cx, CalendarId calendarId,
       return date;
     }
 
+    case CalendarId::Chinese:
     case CalendarId::Dangi:
-    case CalendarId::Chinese: {
+    case CalendarId::Hebrew: {
       static_assert(CalendarHasLeapMonths(CalendarId::Chinese));
       static_assert(CalendarMonthsPerYear(CalendarId::Chinese) == 13);
       static_assert(CalendarHasLeapMonths(CalendarId::Dangi));
       static_assert(CalendarMonthsPerYear(CalendarId::Dangi) == 13);
-
-      MOZ_ASSERT(1 <= month && month <= 13);
-
-      // Create date with month number replaced by month-code.
-      auto monthCode = MonthCode{std::min(month, 12)};
-      auto date = CreateDateFromCodes(cx, calendarId, calendar, eraYear,
-                                      monthCode, day, overflow);
-      if (!date) {
-        return nullptr;
-      }
-
-      // If the ordinal month of |date| matches the input month, no additional
-      // changes are necessary and we can directly return |date|.
-      int32_t ordinal = OrdinalMonth(date.get());
-      if (ordinal == month) {
-        return date;
-      }
-
-      // Otherwise we need to handle three cases:
-      // 1. The input year contains a leap month and we need to adjust the
-      //    month-code.
-      // 2. The thirteenth month of a year without leap months was requested.
-      // 3. The thirteenth month of a year with leap months was requested.
-      if (ordinal > month) {
-        MOZ_ASSERT(1 < month && month <= 12);
-
-        // This case can only happen in leap years.
-        MOZ_ASSERT(MonthsInYear(date.get()) == 13);
-
-        // Leap months can occur after any month in the Chinese calendar.
-        //
-        // Example when the fourth month is a leap month between M03 and M04.
-        //
-        // Month code:     M01  M02  M03  M03L  M04  M05  M06 ...
-        // Ordinal month:  1    2    3    4     5    6    7
-
-        // The month can be off by exactly one.
-        MOZ_ASSERT((ordinal - month) == 1);
-
-        // First try the case when the previous month isn't a leap month. This
-        // case can only occur when |month > 2|, because otherwise we know that
-        // "M01L" is the correct answer.
-        if (month > 2) {
-          auto previousMonthCode = MonthCode{month - 1};
-          date = CreateDateFromCodes(cx, calendarId, calendar, eraYear,
-                                     previousMonthCode, day, overflow);
-          if (!date) {
-            return nullptr;
-          }
-
-          int32_t ordinal = OrdinalMonth(date.get());
-          if (ordinal == month) {
-            return date;
-          }
-        }
-
-        // Fall-through when the previous month is a leap month.
-      } else {
-        MOZ_ASSERT(month == 13);
-        MOZ_ASSERT(ordinal == 12);
-
-        // Years with leap months contain thirteen months.
-        if (MonthsInYear(date.get()) != 13) {
-          if (overflow == TemporalOverflow::Reject) {
-            ReportCalendarFieldOverflow(cx, "month", month);
-            return nullptr;
-          }
-          return date;
-        }
-
-        // Fall-through to return leap month "M12L" at the end of the year.
-      }
-
-      // Finally handle the case when the previous month is a leap month.
-      auto leapMonthCode = MonthCode{month - 1, /* isLeapMonth= */ true};
-      date = CreateDateFromCodes(cx, calendarId, calendar, eraYear,
-                                 leapMonthCode, day, overflow);
-      if (!date) {
-        return nullptr;
-      }
-      MOZ_ASSERT(OrdinalMonth(date.get()) == month, "unexpected ordinal month");
-      return date;
-    }
-
-    case CalendarId::Hebrew: {
       static_assert(CalendarHasLeapMonths(CalendarId::Hebrew));
       static_assert(CalendarMonthsPerYear(CalendarId::Hebrew) == 13);
 
@@ -1181,30 +1097,24 @@ static UniqueICU4XDate CreateDateFrom(JSContext* cx, CalendarId calendarId,
       // Constrain |day| when overflow is "reject" to avoid rejecting too large
       // day values in CreateDateFromCodes.
       //
-      // For example when month = 10 and day = 30 and the input year is a leap
-      // year. We first try month code "M10", but since "M10" can have at most
-      // 29 days, we need to constrain the days value before calling
-      // CreateDateFromCodes.
+      // For example in the Hebrew calendar, when month = 10 and day = 30 and
+      // the input year is a leap year. We first try month code "M10", but since
+      // "M10" can have at most 29 days, we need to constrain the days value
+      // before calling CreateDateFromCodes.
       int32_t constrainedDay = day;
       if (overflow == TemporalOverflow::Reject) {
-        constexpr auto daysInMonth = CalendarDaysInMonth(CalendarId::Hebrew);
+        auto daysInMonth = CalendarDaysInMonth(calendarId);
         if (day > daysInMonth.first && day <= daysInMonth.second) {
           constrainedDay = daysInMonth.first;
         }
       }
 
-      // Create date with month number replaced by month-code.
-      auto monthCode = MonthCode{std::min(month, 12)};
-      auto date = CreateDateFromCodes(cx, calendarId, calendar, eraYear,
-                                      monthCode, constrainedDay, overflow);
-      if (!date) {
-        return nullptr;
-      }
+      // Return after a date with a matching ordinal month was found, but the
+      // date was constructed using a constrained day.
+      auto returnForOrdinalMonthMatch = [&](auto date,
+                                            auto monthCode) -> UniqueICU4XDate {
+        MOZ_ASSERT(OrdinalMonth(date.get()) == month);
 
-      // If the ordinal month of |date| matches the input month, no additional
-      // changes are necessary and we can directly return |date|.
-      int32_t ordinal = OrdinalMonth(date.get());
-      if (ordinal == month) {
         // If |day| was constrained, check if the actual input days value
         // exceeds the number of days in the resolved month.
         if (constrainedDay < day) {
@@ -1218,41 +1128,126 @@ static UniqueICU4XDate CreateDateFrom(JSContext* cx, CalendarId calendarId,
                                      monthCode, day, overflow);
         }
         return date;
+      };
+
+      // Create date with month number replaced by month-code.
+      auto monthCode = MonthCode{std::min(month, 12)};
+      auto date = CreateDateFromCodes(cx, calendarId, calendar, eraYear,
+                                      monthCode, constrainedDay, overflow);
+      if (!date) {
+        return nullptr;
       }
 
-      // Otherwise we need to handle two cases:
-      // 1. The input year contains a leap month and we need to adjust the
-      //    month-code.
-      // 2. The thirteenth month of a year without leap months was requested.
-      if (ordinal > month) {
-        MOZ_ASSERT(1 < month && month <= 12);
+      // If the ordinal month of |date| matches the input month, no additional
+      // changes are necessary and we can directly return |date|.
+      int32_t ordinal = OrdinalMonth(date.get());
+      if (ordinal == month) {
+        return returnForOrdinalMonthMatch(std::move(date), monthCode);
+      }
 
-        // This case can only happen in leap years.
-        MOZ_ASSERT(MonthsInYear(date.get()) == 13);
+      // Otherwise adjust the month code according to the calendar.
+      MonthCode adjustedMonthCode{};
+      if (calendarId == CalendarId::Hebrew) {
+        // We need to handle two cases:
+        // 1. The input year contains a leap month and we need to adjust the
+        //    month-code.
+        // 2. The thirteenth month of a year without leap months was requested.
+        if (ordinal > month) {
+          MOZ_ASSERT(1 < month && month <= 12);
 
-        // Leap months can occur between M05 and M06 in the Hebrew calendar.
-        //
-        // Month code:     M01  M02  M03  M04  M05  M05L  M06 ...
-        // Ordinal month:  1    2    3    4    5    6     7
+          // This case can only happen in leap years.
+          MOZ_ASSERT(MonthsInYear(date.get()) == 13);
 
-        // The month can be off by exactly one.
-        MOZ_ASSERT((ordinal - month) == 1);
-      } else {
-        MOZ_ASSERT(month == 13);
-        MOZ_ASSERT(ordinal == 12);
+          // Leap months can occur between M05 and M06 in the Hebrew calendar.
+          //
+          // Month code:     M01  M02  M03  M04  M05  M05L  M06 ...
+          // Ordinal month:  1    2    3    4    5    6     7
 
-        if (overflow == TemporalOverflow::Reject) {
-          ReportCalendarFieldOverflow(cx, "month", month);
-          return nullptr;
+          // The month can be off by exactly one.
+          MOZ_ASSERT((ordinal - month) == 1);
+        } else {
+          MOZ_ASSERT(month == 13);
+          MOZ_ASSERT(ordinal == 12);
+          MOZ_ASSERT(MonthsInYear(date.get()) != 13);
+          MOZ_ASSERT(day == constrainedDay ||
+                     overflow == TemporalOverflow::Reject);
+
+          if (overflow == TemporalOverflow::Reject) {
+            ReportCalendarFieldOverflow(cx, "month", month);
+            return nullptr;
+          }
+          return date;
         }
-        return date;
+
+        // The previous month is the leap month Adar I iff |month| is six.
+        bool isLeapMonth = month == 6;
+        adjustedMonthCode = MonthCode{month - 1, isLeapMonth};
+      } else {
+        // We need to handle three cases:
+        // 1. The input year contains a leap month and we need to adjust the
+        //    month-code.
+        // 2. The thirteenth month of a year without leap months was requested.
+        // 3. The thirteenth month of a year with leap months was requested.
+        if (ordinal > month) {
+          MOZ_ASSERT(1 < month && month <= 12);
+
+          // This case can only happen in leap years.
+          MOZ_ASSERT(MonthsInYear(date.get()) == 13);
+
+          // Leap months can occur after any month in the Chinese calendar.
+          //
+          // Example when the fourth month is a leap month between M03 and M04.
+          //
+          // Month code:     M01  M02  M03  M03L  M04  M05  M06 ...
+          // Ordinal month:  1    2    3    4     5    6    7
+
+          // The month can be off by exactly one.
+          MOZ_ASSERT((ordinal - month) == 1);
+
+          // First try the case when the previous month isn't a leap month. This
+          // case can only occur when |month > 2|, because otherwise we know
+          // that "M01L" is the correct answer.
+          if (month > 2) {
+            auto previousMonthCode = MonthCode{month - 1};
+            date = CreateDateFromCodes(cx, calendarId, calendar, eraYear,
+                                       previousMonthCode, constrainedDay,
+                                       overflow);
+            if (!date) {
+              return nullptr;
+            }
+
+            int32_t ordinal = OrdinalMonth(date.get());
+            if (ordinal == month) {
+              return returnForOrdinalMonthMatch(std::move(date),
+                                                previousMonthCode);
+            }
+          }
+
+          // Fall-through when the previous month is a leap month.
+        } else {
+          MOZ_ASSERT(month == 13);
+          MOZ_ASSERT(ordinal == 12);
+          MOZ_ASSERT(day == constrainedDay ||
+                     overflow == TemporalOverflow::Reject);
+
+          // Years with leap months contain thirteen months.
+          if (MonthsInYear(date.get()) != 13) {
+            if (overflow == TemporalOverflow::Reject) {
+              ReportCalendarFieldOverflow(cx, "month", month);
+              return nullptr;
+            }
+            return date;
+          }
+
+          // Fall-through to return leap month "M12L" at the end of the year.
+        }
+
+        // Finally handle the case when the previous month is a leap month.
+        adjustedMonthCode = MonthCode{month - 1, /* isLeapMonth= */ true};
       }
 
-      // The previous month is the leap month Adar I iff |month| is six.
-      bool isLeapMonth = month == 6;
-      auto previousMonthCode = MonthCode{month - 1, isLeapMonth};
       date = CreateDateFromCodes(cx, calendarId, calendar, eraYear,
-                                 previousMonthCode, day, overflow);
+                                 adjustedMonthCode, day, overflow);
       if (!date) {
         return nullptr;
       }
